fix(worker): harden expression resolution architecture